# rgc-backend-kit

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: ai-recipes-migration.md  fastapi-auth-guide.md  integration-boundary.md  package-validation.md  quickstart.md  security.md  storage-guide.md  storage.md  troubleshooting.md
src/rgc_backend_kit/: __init__.py
src/rgc_backend_kit/security/: __init__.py  config.py  exceptions.py  fastapi_adapter.py  jwt_manager.py  models.py  token_store.py
src/rgc_backend_kit/storage/: __init__.py  config.py  exceptions.py  factory.py  s3_client.py  url_builder.py
tests/: README.md  conftest.py
tests/integration/: test_r2_storage_client.py  test_redis_token_store.py  test_s3_storage_client.py
tests/security/: test_fastapi_adapter.py  test_jwt_manager.py  test_token_store.py
tests/storage/: test_s3_client.py  test_storage_factory.py  test_url_builder.py
