[project]
name = "rgc-backend-kit"
version = "0.1.0"
description = "Reusable backend components for JWT authentication and S3-compatible storage."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyjwt>=2.8.0",
]

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.110.0",
]
redis = [
    "redis>=5.0.0",
]
storage = [
    "boto3>=1.34.0",
    "botocore>=1.34.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "fastapi>=0.110.0",
    "httpx>=0.27.0",
    "redis>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-m 'not integration'"
markers = [
    "unit: isolated tests for framework-neutral logic",
    "integration: tests that touch external services",
    "contract: public API and adapter contract tests",
]
