[project]
name = "rgc-backend-kit"
version = "0.1.1"
description = "Reusable backend components for JWT authentication and S3-compatible storage."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "rgc318" },
]
keywords = ["jwt", "authentication", "s3", "storage", "backend"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "pyjwt>=2.8.0,<2.13.0",
]

[project.urls]
Homepage = "https://github.com/rgc318/rgc-backend-kit"
Repository = "https://github.com/rgc318/rgc-backend-kit"
Issues = "https://github.com/rgc318/rgc-backend-kit/issues"
Documentation = "https://github.com/rgc318/rgc-backend-kit/tree/main/docs"

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.110.0",
]
redis = [
    "redis>=5.0.0",
]
storage = [
    "boto3>=1.34.0",
    "botocore>=1.34.0",
]
dev = [
    "build>=1.2.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "fastapi>=0.110.0",
    "httpx>=0.27.0",
    "redis>=5.0.0",
    "twine>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-m 'not integration'"
markers = [
    "unit: isolated tests for framework-neutral logic",
    "integration: tests that touch external services",
    "contract: public API and adapter contract tests",
]
